# budoux-cpp

./: .clang-format  CMakeLists.txt  README.md
budoux/: CMakeLists.txt
budoux/include/: budoux.h
budoux/include/models/: JAModel.h  model.h
budoux/source/: budoux.cpp
budoux/source/models/: JAModel.cpp
cmake/: tools.cmake
models/: ja.json
tests/: CMakeLists.txt
tests/source/: JAModel_test.cpp  parser_test.cpp
tools/: generate_model.py
